--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Geist";
+  src: url("Geist-Regular.woff2") format("woff");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
